--- a/gym-match3/test_play.ipynb
+++ b/gym-match3/test_play.ipynb
@@ -37,16 +37,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.  4.  2.  3.  1.  3.  3.  1.  3.]\n",
-      " [ 4.  5.  2.  1.  3.  3.  4.  1.  5.]\n",
-      " [ 2.  2.  4.  4.  2.  2.  4.  5.  3.]\n",
-      " [ 3.  1.  1.  2.  5.  4.  1.  2.  2.]\n",
-      " [ 3.  3.  4.  1. 16. 16.  1.  1.  2.]\n",
-      " [ 1.  4.  3.  4. 16. 16.  5.  3.  4.]\n",
-      " [ 1.  2.  2.  3.  3.  2.  4.  2.  2.]\n",
-      " [ 4.  4.  3.  1.  3.  1.  1.  2.  4.]\n",
-      " [ 4.  3.  2.  4.  4.  3.  4.  4.  1.]\n",
-      " [ 2.  1.  4.  4.  2.  3.  1.  1.  4.]]\n"
+      "[[ 5.  4.  4.  1.  4.  5.  5.  1.  4.]\n",
+      " [ 4.  4.  5.  1.  5.  2.  4.  3.  1.]\n",
+      " [ 2.  3.  1.  4.  3.  2.  4.  4.  3.]\n",
+      " [ 2.  4.  1.  4.  4.  3.  2.  4.  4.]\n",
+      " [ 4.  1.  3.  1. 14. 14.  2.  1.  2.]\n",
+      " [ 1.  4.  1.  3. 14. 14.  3.  1.  1.]\n",
+      " [ 1.  3.  2.  1.  4.  3.  4.  2.  4.]\n",
+      " [ 4.  2.  4.  1.  3.  4.  2.  4.  3.]\n",
+      " [ 3.  1.  1.  4.  1.  2.  1.  2.  1.]\n",
+      " [ 4.  3.  2.  2.  1.  3.  4.  1.  3.]]\n"
      ]
     }
    ],
@@ -56,41 +56,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "frozenset({(2, 1), (2, 2)})\n"
+      "frozenset({(3, 1), (3, 2)})\n",
+      "<class 'gym_match3.envs.game.Cell'>\n",
+      "<class 'gym_match3.envs.game.Cell'>\n",
+      "<class 'gym_match3.envs.game.Cell'>\n",
+      "[(4, 3), (5, 3), (4, 6), (5, 6), (3, 4), (3, 5), (6, 4), (6, 5)]\n",
+      "{(3, 4)}\n",
+      "{(3, 2), (3, 4), (3, 3)}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(array([[ 1.,  4.,  1.,  3.,  1.,  3.,  3.,  1.,  3.],\n",
-       "        [ 4.,  5.,  1.,  1.,  3.,  3.,  4.,  1.,  5.],\n",
-       "        [ 2.,  4.,  5.,  4.,  2.,  2.,  4.,  5.,  3.],\n",
-       "        [ 3.,  1.,  1.,  2.,  5.,  4.,  1.,  2.,  2.],\n",
-       "        [ 3.,  3.,  4.,  1., 16., 16.,  1.,  1.,  2.],\n",
-       "        [ 1.,  4.,  3.,  4., 16., 16.,  5.,  3.,  4.],\n",
-       "        [ 1.,  2.,  2.,  3.,  3.,  2.,  4.,  2.,  2.],\n",
-       "        [ 4.,  4.,  3.,  1.,  3.,  1.,  1.,  2.,  4.],\n",
-       "        [ 4.,  3.,  2.,  4.,  4.,  3.,  4.,  4.,  1.],\n",
-       "        [ 2.,  1.,  4.,  4.,  2.,  3.,  1.,  1.,  4.]]),\n",
-       " 3,\n",
+       "(array([[ 5.,  1.,  4.,  3.,  4.,  3.,  5.,  2.,  4.],\n",
+       "        [ 5.,  4.,  2.,  1.,  4.,  1.,  2.,  3.,  1.],\n",
+       "        [ 2.,  3.,  5.,  1.,  5.,  5.,  4.,  4.,  3.],\n",
+       "        [ 2.,  1.,  1.,  4.,  3.,  3.,  2.,  4.,  4.],\n",
+       "        [ 4.,  1.,  3.,  1., 14., 14.,  2.,  1.,  2.],\n",
+       "        [ 1.,  4.,  1.,  3., 14., 14.,  3.,  1.,  1.],\n",
+       "        [ 1.,  3.,  2.,  1.,  4.,  3.,  4.,  2.,  4.],\n",
+       "        [ 4.,  2.,  4.,  1.,  3.,  4.,  2.,  4.,  3.],\n",
+       "        [ 3.,  1.,  1.,  4.,  1.,  2.,  1.,  2.,  1.],\n",
+       "        [ 4.,  3.,  2.,  2.,  1.,  3.,  4.,  1.,  3.]]),\n",
+       " {'score': 19, 'damage_on_monster': 1},\n",
        " False,\n",
        " {})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.step(17)"
+    "env.step(25)"
    ]
   }
  ],
