--- a/gym-match3/test_play.ipynb
+++ b/gym-match3/test_play.ipynb
@@ -14,7 +14,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "from gym_match3.envs import Match3Env\n",
     "from gym_match3.envs.levels import LEVELS #  default levels\n",
@@ -37,16 +45,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 5.  4.  4.  1.  4.  5.  5.  1.  4.]\n",
-      " [ 4.  4.  5.  1.  5.  2.  4.  3.  1.]\n",
-      " [ 2.  3.  1.  4.  3.  2.  4.  4.  3.]\n",
-      " [ 2.  4.  1.  4.  4.  3.  2.  4.  4.]\n",
-      " [ 4.  1.  3.  1. 14. 14.  2.  1.  2.]\n",
-      " [ 1.  4.  1.  3. 14. 14.  3.  1.  1.]\n",
-      " [ 1.  3.  2.  1.  4.  3.  4.  2.  4.]\n",
-      " [ 4.  2.  4.  1.  3.  4.  2.  4.  3.]\n",
-      " [ 3.  1.  1.  4.  1.  2.  1.  2.  1.]\n",
-      " [ 4.  3.  2.  2.  1.  3.  4.  1.  3.]]\n"
+      "[[ 4.  3.  3.  4.  1.  2.  5.  5.  3.]\n",
+      " [ 4.  2.  4.  1.  4.  3.  4.  3.  1.]\n",
+      " [ 1.  5.  5.  3.  5.  4.  5.  2.  3.]\n",
+      " [ 4.  2.  1.  2.  4.  4.  5.  1.  4.]\n",
+      " [ 4.  2.  2.  3. 14. 14.  3.  2.  1.]\n",
+      " [ 1.  1.  4.  1. 14. 14.  2.  3.  4.]\n",
+      " [ 4.  1.  3.  1.  1.  2.  4.  3.  3.]\n",
+      " [ 4.  2.  2.  4.  1.  2.  1.  4.  4.]\n",
+      " [ 1.  3.  1.  1.  3.  3.  1.  1.  4.]\n",
+      " [ 4.  1.  2.  3.  2.  1.  3.  1.  3.]]\n"
      ]
     }
    ],
@@ -64,30 +72,77 @@
      "output_type": "stream",
      "text": [
       "frozenset({(3, 1), (3, 2)})\n",
-      "<class 'gym_match3.envs.game.Cell'>\n",
-      "<class 'gym_match3.envs.game.Cell'>\n",
-      "<class 'gym_match3.envs.game.Cell'>\n",
-      "[(4, 3), (5, 3), (4, 6), (5, 6), (3, 4), (3, 5), (6, 4), (6, 5)]\n",
-      "{(3, 4)}\n",
-      "{(3, 2), (3, 4), (3, 3)}\n"
+      "False\n",
+      "False\n",
+      "False\n",
+      "play time 1.377971887588501\n",
+      "process obs 0.030998706817626953\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(array([[ 5.,  1.,  4.,  3.,  4.,  3.,  5.,  2.,  4.],\n",
-       "        [ 5.,  4.,  2.,  1.,  4.,  1.,  2.,  3.,  1.],\n",
-       "        [ 2.,  3.,  5.,  1.,  5.,  5.,  4.,  4.,  3.],\n",
-       "        [ 2.,  1.,  1.,  4.,  3.,  3.,  2.,  4.,  4.],\n",
-       "        [ 4.,  1.,  3.,  1., 14., 14.,  2.,  1.,  2.],\n",
-       "        [ 1.,  4.,  1.,  3., 14., 14.,  3.,  1.,  1.],\n",
-       "        [ 1.,  3.,  2.,  1.,  4.,  3.,  4.,  2.,  4.],\n",
-       "        [ 4.,  2.,  4.,  1.,  3.,  4.,  2.,  4.,  3.],\n",
-       "        [ 3.,  1.,  1.,  4.,  1.,  2.,  1.,  2.,  1.],\n",
-       "        [ 4.,  3.,  2.,  2.,  1.,  3.,  4.,  1.,  3.]]),\n",
-       " {'score': 19, 'damage_on_monster': 1},\n",
+       "(tensor([[[0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 1., 1., 0.],\n",
+       "          [0., 0., 1.,  ..., 0., 0., 0.],\n",
+       "          ...,\n",
+       "          [1., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 1., 0.,  ..., 1., 1., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 1.,  ..., 0., 0., 1.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [1., 0., 0.,  ..., 0., 0., 1.]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 1.,  ..., 0., 0., 0.],\n",
+       "          [0., 0., 1.,  ..., 1., 0., 1.],\n",
+       "          [0., 0., 1.,  ..., 1., 0., 1.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.,  ..., 0., 1., 1.],\n",
+       "          [1., 0., 0.,  ..., 0., 0., 0.],\n",
+       "          [1., 0., 0.,  ..., 0., 0., 0.]]]),\n",
+       " {'score': 0, 'damage_on_monster': 0, 'damage_on_user': 0},\n",
        " False,\n",
-       " {})"
+       " {'action_space': array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 1., 0., 0., 1., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 1., 0., 0., 0., 1., 1., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
+       "         1., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 1., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 1., 0., 1., 0., 0., 0., 0.,\n",
+       "         0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 1.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0.])})"
       ]
      },
      "execution_count": 3,
@@ -96,7 +151,8 @@
     }
    ],
    "source": [
-    "env.step(25)"
+    "env.step(25)\n",
+    "env.render()"
    ]
   }
  ],
