--- a/gym-match3/test_play.ipynb
+++ b/gym-match3/test_play.ipynb
@@ -184,327 +184,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0 6.0\n",
-      "(0, 1)\n",
-      "(0, 2)\n",
-      "<class 'set'>\n",
-      "have powerup\n",
-      "False\n",
-      "(0, 0)\n",
-      "<class 'set'>\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n",
-      "not hvae move\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 16\u001b[0m\n\u001b[0;32m     10\u001b[0m list_monsters \u001b[38;5;241m=\u001b[39m [DameMonster(position\u001b[38;5;241m=\u001b[39mPoint(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m),\n\u001b[0;32m     11\u001b[0m                     width\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[0;32m     12\u001b[0m                     height\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[0;32m     13\u001b[0m                     hp\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m30\u001b[39m\n\u001b[0;32m     14\u001b[0m                     ),]\n\u001b[0;32m     15\u001b[0m game\u001b[38;5;241m.\u001b[39mstart(board, list_monsters)\n\u001b[1;32m---> 16\u001b[0m \u001b[43mgame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mswap\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPoint\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPoint\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:986\u001b[0m, in \u001b[0;36mGame.swap\u001b[1;34m(self, point, point2)\u001b[0m\n\u001b[0;32m    984\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mswap\u001b[39m(\u001b[38;5;28mself\u001b[39m, point: Point, point2: Point):\n\u001b[0;32m    985\u001b[0m     direction \u001b[38;5;241m=\u001b[39m point2 \u001b[38;5;241m-\u001b[39m point\n\u001b[1;32m--> 986\u001b[0m     score \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__move\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpoint\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdirection\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    988\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m score\n",
-      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:1018\u001b[0m, in \u001b[0;36mGame.__move\u001b[1;34m(self, point, direction)\u001b[0m\n\u001b[0;32m   1016\u001b[0m     \u001b[38;5;66;03m###\u001b[39;00m\n\u001b[0;32m   1017\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__filler\u001b[38;5;241m.\u001b[39mmove_and_fill(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mboard)\n\u001b[1;32m-> 1018\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__operate_until_possible_moves\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1021\u001b[0m \u001b[38;5;66;03m# print(\"refill\", time.time() - s_t)\u001b[39;00m\n\u001b[0;32m   1022\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dmg \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:1080\u001b[0m, in \u001b[0;36mGame.__operate_until_possible_moves\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1077\u001b[0m score \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__scan_del_mvnans_fill_until()\n\u001b[0;32m   1078\u001b[0m \u001b[38;5;66;03m# print(\"up\", time.time() - s_t)\u001b[39;00m\n\u001b[0;32m   1079\u001b[0m \u001b[38;5;66;03m# s_t = time.time()\u001b[39;00m\n\u001b[1;32m-> 1080\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__shuffle_until_possible\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1081\u001b[0m \u001b[38;5;66;03m# print(\"shuffle\", time.time() - s_t)\u001b[39;00m\n\u001b[0;32m   1082\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m score\n",
-      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:1115\u001b[0m, in \u001b[0;36mGame.__shuffle_until_possible\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1113\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mboard\u001b[38;5;241m.\u001b[39mshuffle(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__random_state)\n\u001b[0;32m   1114\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__scan_del_mvnans_fill_until()\n\u001b[1;32m-> 1115\u001b[0m     possible_moves \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__get_possible_moves\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1116\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
-      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:1091\u001b[0m, in \u001b[0;36mGame.__get_possible_moves\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1090\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__get_possible_moves\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m-> 1091\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__mv_searcher\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msearch_moves\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1092\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mboard\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1093\u001b[0m \u001b[43m        \u001b[49m\u001b[43mall_moves\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__all_moves\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:678\u001b[0m, in \u001b[0;36mMovesSearcher.search_moves\u001b[1;34m(self, board, all_moves)\u001b[0m\n\u001b[0;32m    676\u001b[0m possible_moves \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[0;32m    677\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m point \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpoints_generator(board):\n\u001b[1;32m--> 678\u001b[0m     possible_moves_for_point \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__search_moves_for_point\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    679\u001b[0m \u001b[43m        \u001b[49m\u001b[43mboard\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpoint\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mneed_all\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mall_moves\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    680\u001b[0m     possible_moves\u001b[38;5;241m.\u001b[39mupdate(possible_moves_for_point)\n\u001b[0;32m    681\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(possible_moves_for_point) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m all_moves:\n",
-      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:691\u001b[0m, in \u001b[0;36mMovesSearcher.__search_moves_for_point\u001b[1;34m(self, board, point, need_all)\u001b[0m\n\u001b[0;32m    689\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    690\u001b[0m     board\u001b[38;5;241m.\u001b[39mmove(point, Point(\u001b[38;5;241m*\u001b[39mdirection))\n\u001b[1;32m--> 691\u001b[0m     matches, _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscan_board_for_matches\u001b[49m\u001b[43m(\u001b[49m\u001b[43mboard\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mneed_all\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mneed_all\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    692\u001b[0m     \u001b[38;5;66;03m# inverse move\u001b[39;00m\n\u001b[0;32m    693\u001b[0m     board\u001b[38;5;241m.\u001b[39mmove(point, Point(\u001b[38;5;241m*\u001b[39mdirection))\n",
-      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:498\u001b[0m, in \u001b[0;36mMatchesSearcher.scan_board_for_matches\u001b[1;34m(self, board, need_all)\u001b[0m\n\u001b[0;32m    496\u001b[0m matches \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[0;32m    497\u001b[0m new_power_ups \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m()\n\u001b[1;32m--> 498\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m point \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpoints_generator(board):\n\u001b[0;32m    499\u001b[0m     to_del, to_add \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__get_match3_for_point(board, point, need_all\u001b[38;5;241m=\u001b[39mneed_all)\n\u001b[0;32m    500\u001b[0m     \u001b[38;5;66;03m# print(_)\u001b[39;00m\n",
-      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:467\u001b[0m, in \u001b[0;36mAbstractSearcher.points_generator\u001b[1;34m(board)\u001b[0m\n\u001b[0;32m    465\u001b[0m points \u001b[38;5;241m=\u001b[39m [Point(i, j) \u001b[38;5;28;01mfor\u001b[39;00m i, j \u001b[38;5;129;01min\u001b[39;00m product(\u001b[38;5;28mrange\u001b[39m(rows), \u001b[38;5;28mrange\u001b[39m(cols))]\n\u001b[0;32m    466\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m point \u001b[38;5;129;01min\u001b[39;00m points:\n\u001b[1;32m--> 467\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m board[point] \u001b[38;5;241m==\u001b[39m board\u001b[38;5;241m.\u001b[39mimmovable_shape \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[43mneed_to_match\u001b[49m\u001b[43m(\u001b[49m\u001b[43mboard\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpoint\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m    468\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m    469\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "{'score': 2, 'cancel_score': 0, 'damage_on_monster': 1, 'damage_on_user': 0}\n",
+      "[[ 4.  1.  1.]\n",
+      " [ 5. 15.  1.]\n",
+      " [ 1.  1.  2.]]\n"
      ]
     }
    ],
    "source": [
     "from gym_match3.envs.game import *\n",
     "\n",
-    "game = Game(rows=3, columns=3, n_shapes=(3 * 3),\n",
+    "game = Game(rows=3, columns=3, n_shapes=5,\n",
     "                         length=3, random_state=1)\n",
     "board = np.array([\n",
-    "    [6, 1, 10],\n",
-    "    [1, 14, 2],\n",
-    "    [2, 1, 7]\n",
+    "    [7, 1, 1],\n",
+    "    [1, 15, 1],\n",
+    "    [1, 1, 2]\n",
     "])\n",
-    "list_monsters = [DameMonster(position=Point(1, 1),\n",
+    "                 \n",
+    "blocker = BlockerFactory.create_blocker(11, Point(2, 0))\n",
+    "list_monsters = [\n",
+    "        BoxMonster(15, position=Point(1, 1),\n",
+    "                   relax_interval = 0,\n",
+    "                   setup_interval = 0,\n",
     "                    width=1,\n",
     "                    height=1,\n",
     "                    hp=30\n",
-    "                    ),]\n",
+    "                    ),\n",
+    "        blocker]\n",
     "game.start(board, list_monsters)\n",
-    "game.swap(Point(0, 0), Point(0, 1))"
+    "print(game.swap(Point(0, 0), Point(1, 0)))\n",
+    "print(game.board)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'score': 3, 'cancel_score': 0, 'damage_on_monster': 1, 'damage_on_user': 0}\n",
+      "[[ 4.  1.  4.]\n",
+      " [ 5. 15.  5.]\n",
+      " [ 1.  2.  1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(game.swap(Point(2, 1), Point(2, 2)))\n",
+    "print(game.board)"
    ]
   }
  ],
