update some bug (have box)

--- a/gym-match3/test_play.ipynb
+++ b/gym-match3/test_play.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -192,9 +192,10 @@
      "output_type": "stream",
      "text": [
       "{'score': 2, 'cancel_score': 0, 'damage_on_monster': 1, 'damage_on_user': 0}\n",
-      "[[ 4.  1.  1.]\n",
+      "[<gym_match3.envs.game.BoxMonster object at 0x0000020C892B20D0>, <gym_match3.envs.game.BombBlocker object at 0x0000020C892C00D0>, <gym_match3.envs.game.BombBlocker object at 0x0000020C892C0A30>]\n",
+      "[[ 4. 11.  1.]\n",
       " [ 5. 15.  1.]\n",
-      " [ 1.  1.  2.]]\n"
+      " [11.  1.  2.]]\n"
      ]
     }
    ],
@@ -204,9 +205,9 @@
     "game = Game(rows=3, columns=3, n_shapes=5,\n",
     "                         length=3, random_state=1)\n",
     "board = np.array([\n",
-    "    [7, 1, 1],\n",
+    "    [9, 1, 1],\n",
     "    [1, 15, 1],\n",
-    "    [1, 1, 2]\n",
+    "    [11, 1, 2]\n",
     "])\n",
     "                 \n",
     "blocker = BlockerFactory.create_blocker(11, Point(2, 0))\n",
@@ -221,22 +222,145 @@
     "        blocker]\n",
     "game.start(board, list_monsters)\n",
     "print(game.swap(Point(0, 0), Point(1, 0)))\n",
+    "print(game.list_monsters)\n",
     "print(game.board)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'score': 3, 'cancel_score': 0, 'damage_on_monster': 1, 'damage_on_user': 0}\n",
-      "[[ 4.  1.  4.]\n",
-      " [ 5. 15.  5.]\n",
-      " [ 1.  2.  1.]]\n"
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n",
+      "not hvae move\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mgame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mswap\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPoint\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPoint\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(game\u001b[38;5;241m.\u001b[39mboard)\n",
+      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:1071\u001b[0m, in \u001b[0;36mGame.swap\u001b[1;34m(self, point, point2)\u001b[0m\n\u001b[0;32m   1069\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mswap\u001b[39m(\u001b[38;5;28mself\u001b[39m, point: Point, point2: Point):\n\u001b[0;32m   1070\u001b[0m     direction \u001b[38;5;241m=\u001b[39m point2 \u001b[38;5;241m-\u001b[39m point\n\u001b[1;32m-> 1071\u001b[0m     score \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__move\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpoint\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdirection\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1073\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m score\n",
+      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:1121\u001b[0m, in \u001b[0;36mGame.__move\u001b[1;34m(self, point, direction)\u001b[0m\n\u001b[0;32m   1119\u001b[0m     \u001b[38;5;66;03m###\u001b[39;00m\n\u001b[0;32m   1120\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__filler\u001b[38;5;241m.\u001b[39mmove_and_fill(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mboard)\n\u001b[1;32m-> 1121\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__operate_until_possible_moves\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1123\u001b[0m \u001b[38;5;66;03m# print(\"refill\", time.time() - s_t)\u001b[39;00m\n\u001b[0;32m   1124\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dmg \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:1184\u001b[0m, in \u001b[0;36mGame.__operate_until_possible_moves\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1181\u001b[0m score \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__scan_del_mvnans_fill_until()\n\u001b[0;32m   1182\u001b[0m \u001b[38;5;66;03m# print(\"up\", time.time() - s_t)\u001b[39;00m\n\u001b[0;32m   1183\u001b[0m \u001b[38;5;66;03m# s_t = time.time()\u001b[39;00m\n\u001b[1;32m-> 1184\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__shuffle_until_possible\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1185\u001b[0m \u001b[38;5;66;03m# print(\"shuffle\", time.time() - s_t)\u001b[39;00m\n\u001b[0;32m   1186\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m score\n",
+      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:1219\u001b[0m, in \u001b[0;36mGame.__shuffle_until_possible\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1217\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mboard\u001b[38;5;241m.\u001b[39mshuffle(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__random_state)\n\u001b[0;32m   1218\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__scan_del_mvnans_fill_until()\n\u001b[1;32m-> 1219\u001b[0m     possible_moves \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__get_possible_moves\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1220\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
+      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:1195\u001b[0m, in \u001b[0;36mGame.__get_possible_moves\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1194\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__get_possible_moves\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m-> 1195\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__mv_searcher\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msearch_moves\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1196\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mboard\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1197\u001b[0m \u001b[43m        \u001b[49m\u001b[43mall_moves\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__all_moves\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:698\u001b[0m, in \u001b[0;36mMovesSearcher.search_moves\u001b[1;34m(self, board, all_moves)\u001b[0m\n\u001b[0;32m    696\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m all_moves \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m (all_moves \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m not_have_pu):\n\u001b[0;32m    697\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m point \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpoints_generator(board):\n\u001b[1;32m--> 698\u001b[0m         possible_moves_for_point \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__search_moves_for_point\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    699\u001b[0m \u001b[43m            \u001b[49m\u001b[43mboard\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpoint\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mneed_all\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mall_moves\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    700\u001b[0m         possible_moves\u001b[38;5;241m.\u001b[39mupdate(possible_moves_for_point)\n\u001b[0;32m    701\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(possible_moves_for_point) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m all_moves:\n",
+      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:711\u001b[0m, in \u001b[0;36mMovesSearcher.__search_moves_for_point\u001b[1;34m(self, board, point, need_all)\u001b[0m\n\u001b[0;32m    709\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    710\u001b[0m     board\u001b[38;5;241m.\u001b[39mmove(point, Point(\u001b[38;5;241m*\u001b[39mdirection))\n\u001b[1;32m--> 711\u001b[0m     matches, _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscan_board_for_matches\u001b[49m\u001b[43m(\u001b[49m\u001b[43mboard\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mneed_all\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mneed_all\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    712\u001b[0m     \u001b[38;5;66;03m# inverse move\u001b[39;00m\n\u001b[0;32m    713\u001b[0m     board\u001b[38;5;241m.\u001b[39mmove(point, Point(\u001b[38;5;241m*\u001b[39mdirection))\n",
+      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:498\u001b[0m, in \u001b[0;36mMatchesSearcher.scan_board_for_matches\u001b[1;34m(self, board, need_all)\u001b[0m\n\u001b[0;32m    496\u001b[0m matches \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[0;32m    497\u001b[0m new_power_ups \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m()\n\u001b[1;32m--> 498\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m point \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpoints_generator(board):\n\u001b[0;32m    499\u001b[0m     to_del, to_add \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__get_match3_for_point(board, point, need_all\u001b[38;5;241m=\u001b[39mneed_all)\n\u001b[0;32m    500\u001b[0m     \u001b[38;5;66;03m# print(_)\u001b[39;00m\n",
+      "File \u001b[1;32me:\\PPO_M3_Simulator\\gym-match3\\gym_match3\\envs\\game.py:467\u001b[0m, in \u001b[0;36mAbstractSearcher.points_generator\u001b[1;34m(board)\u001b[0m\n\u001b[0;32m    465\u001b[0m points \u001b[38;5;241m=\u001b[39m [Point(i, j) \u001b[38;5;28;01mfor\u001b[39;00m i, j \u001b[38;5;129;01min\u001b[39;00m product(\u001b[38;5;28mrange\u001b[39m(rows), \u001b[38;5;28mrange\u001b[39m(cols))]\n\u001b[0;32m    466\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m point \u001b[38;5;129;01min\u001b[39;00m points:\n\u001b[1;32m--> 467\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m board[point] \u001b[38;5;241m==\u001b[39m board\u001b[38;5;241m.\u001b[39mimmovable_shape \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[43mneed_to_match\u001b[49m\u001b[43m(\u001b[49m\u001b[43mboard\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpoint\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m    468\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m    469\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
