--- a/gym-match3/test_play.ipynb
+++ b/gym-match3/test_play.ipynb
@@ -184,15 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'score': 2, 'cancel_score': 0, 'damage_on_monster': 1, 'damage_on_user': 0}\n",
-      "[<gym_match3.envs.game.BoxMonster object at 0x0000020C892B20D0>, <gym_match3.envs.game.BombBlocker object at 0x0000020C892C00D0>, <gym_match3.envs.game.BombBlocker object at 0x0000020C892C0A30>]\n",
+      "[(1, 1)]\n",
+      "{'score': 2, 'cancel_score': 0, 'damage_on_monster': 2, 'damage_on_user': 0}\n",
+      "[<gym_match3.envs.game.BoxMonster object at 0x0000020C892B2400>, <gym_match3.envs.game.BombBlocker object at 0x0000020C892B2370>, <gym_match3.envs.game.BombBlocker object at 0x0000020CEC3A87C0>]\n",
       "[[ 4. 11.  1.]\n",
       " [ 5. 15.  1.]\n",
       " [11.  1.  2.]]\n"
